--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ playwright = "^1.32.1"
 pydantic = "^1.10.7"
 allure-pytest = "^2.13.1"
 pytest-playwright = "^0.3.2"
+python-dotenv = "^1.0.0"
 
 [tool.pytest.ini_options]
 pythonpath = [
