--- a/Dockerfile.main
+++ b/Dockerfile.main
@@ -1,7 +1,9 @@
 FROM python:3.11-bullseye
+RUN mkdir -p /bff-integration
+WORKDIR /bff-integration
 COPY poetry.lock .
 COPY pyproject.toml .
 RUN pip install poetry
 RUN poetry install
-RUN poetry run playwright install
+RUN poetry run playwright install chromium
 RUN poetry run playwright install-deps
