--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ pydantic = "^1.10.7"
 allure-pytest = "^2.13.1"
 pytest-playwright = "^0.3.2"
 python-dotenv = "^1.0.0"
+pillow = "^9.5.0"
+pixelmatch = "^0.3.0"
 
 [tool.pytest.ini_options]
 pythonpath = [
